[tool.poetry]
name = "reddit-purge"
version = "0.1.0"
description = "Delete reddit comment history"
authors = ["Vineet John"]
license = "https://github.com/vineetjohn/reddit-purge/blob/master/LICENSE"
readme = "README.md"
packages = [
    {include = "comments_purge.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
comments_purge = 'comments_purge:main'
