[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-purge"
version = "0.1.0"
description = "Delete reddit comment history"
authors = [
    {name = "Vineet John"}
]
license = {text = "https://github.com/vineetjohn/reddit-purge/blob/master/LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpraw>=7.8.1",
]

[project.optional-dependencies]
dev = []

[project.scripts]
comments_purge = "comments_purge:main"

[tool.setuptools]
py-modules = ["comments_purge"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
